use g_return_val_if_reached() over g_assert_not_reached()

Not quite as ideal for us as the assertions, but gets the job
done and lets external compiler tooling have a default value
returned from the function.

https://bugzilla.gnome.org/show_bug.cgi?id=785287